example/lib/src/generated/errors/errors_localization_az.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Azerbaijani (`az`).
class ErrorsLocalizationAz extends ErrorsLocalization {
  ErrorsLocalizationAz([String locale = 'az']) : super(locale);

  @override
  String get error => 'Xəta baş verdi';

  @override
  String get unexpectedError => 'Gözlənilməz bir xəta baş verdi';

  @override
  String get bugReportSentText => 'Baq reportu uğurla göndərildi.';
}
